footer issue fixed

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     </div>
                 </div>
         <div class="photo-box"></div>
-        <div class="footer-box"></div>
+        <div class="footer-box">&nbsp;</div>
     </div>
 </body>
 </html>
