--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Italiana&family=Lato&family=Roboto&display=swap');
         .wrapper{
-            height: 100%;
+            min-height: 100%;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr 1fr;
             grid-template-rows: 0.5fr 4fr 0.2fr;
@@ -214,7 +214,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer-box"></div>
+        <div class="footer-box">&nbsp;</div>
     </div>
 </body>
 </html>
